--- a/hicheel9/style.css
+++ b/hicheel9/style.css
@@ -43,7 +43,7 @@ main{
     justify-content: space-around;
   }
   .profile{
-    background-color: black;
+    background-color: rgb(35, 35, 35);
     width: 18%;
     height: 85%;
     align-items: center;
