--- a/hicheel7/style.css
+++ b/hicheel7/style.css
@@ -118,6 +118,9 @@ border-radius: 10px;
  #above p:hover{
     background-color: black;
     color: white;
+    border-radius: 20px;
+    padding: 4px;
+    
  }
 #p1{
     background-color:white;
