--- a/hicheel7/style.css
+++ b/hicheel7/style.css
@@ -1,201 +1,502 @@
-.top{ 
-    width: 100%;
-    height: 10vh;
-    background-color: aquamarine;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    font-size: large;
-    align-items: center;
-   
-}
-body{ 
-    margin: 0%;
-}
-.container{
-    display: flex;
-}
-.left{ 
-    height: 90vh;
-    width: 15%;
-    background-color: rgb(154, 109, 196);
-   display: flex;
-   flex-direction: column;
-}
-.right{
-    height: 80vh;
-    width: 85%;
-    display: flex;
-    flex-wrap: wrap;
-}
-.youtube{
-    width: 30%;
-    height: 30%;
-  margin-left: 18px;
-}
 
-
-#under{
-    height: 80vh;
-    width: 100%;
-    background-color: rgb(24, 98, 77);
-    margin: 0%;
-    padding: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-}
-#above{
-    height:5vh;
-    width: 100%;
-    background-color: aliceblue;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-}
-._1{ 
-    background-color: rgb(182, 182, 182);
-    height: 40%;
-    width: 25%;
-    margin: 20px 20px;
-    display: flex;
-    flex-direction: column;
-}
-._1_1{
-    display: flex;
-   justify-content: space-evenly;
-   align-items: center;
-    background-color: yellow;
-    margin: 0% 5% 5% 5% ;
-}
-.img1{
-    margin: 5%;
-  background-color: brown;
-   height: 60%;
-   width: 90%;
-border-radius: 10px;
-}
-.img1_1{
-    margin: 5%;
-    background-color: aquamarine;
-    height: 20px;
-    width: 20px;
-    align-items: start;
-   
-}
-.description1_1{ 
-    background-color: antiquewhite;
- 
-    height: 60%;
-    width: 60%;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-}
-.description2{
-    background-color: antiquewhite;
-   font-size: 11px;
-   margin: 5%;
-
-}
-.icon{
-    display: flex;
-    flex-direction: row;
-   align-items: flex-start;
-    padding: 10%;
-    height: 5%;
-    width: 100%;
-    flex-direction: column;
-}
-.top {
-    font-family: "Roboto", sans-serif;
-    font-weight: 900;
-    font-style: normal;
-
-  }
- 
- 
- #above p:hover{
-    background-color: black;
-    color: white;
-    border-radius: 20px;
-    padding: 4px;
+@media screen and (min-width: 769px) and (max-width: 1600px) {
+    .top{ 
+        width: 100%;
+        height: 10vh;
+        background-color: rgb(255, 255, 255);
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        font-size: large;
+        align-items: center;
+       
+    }
+    body{ 
+        margin: 0%;
+    }
+    .container{
+        display: flex;
+    }
+    .left{ 
+        height: 90vh;
+        width: 15%;
+        background-color: rgb(255, 255, 255);
+       display: flex;
+       flex-direction: column;
+    }
+    .right{
+        height: 80vh;
+        width: 85%;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .youtube{
+        width: 30%;
+        height: 30%;
+      margin-left: 18px;
+    }
     
- }
-#p1{
-    background-color:white;
-    font-size: 10px;
-    width: 117px;
-    height: 25px;
+    
+    #under{
+        height: 80vh;
+        width: 100%;
+        background-color: rgb(255, 255, 255);
+        margin: 0%;
+        padding: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+    #above{
+        height:5vh;
+        width: 100%;
+        background-color: aliceblue;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+    ._1{ 
+        background-color: rgb(255, 255, 255);
+        height: 40%;
+        width: 25%;
+        margin: 20px 20px;
+        display: flex;
+        flex-direction: column;
+    }
+    ._1_1{
+        display: flex;
+       justify-content: space-evenly;
+       align-items: center;
+        background-color: rgb(255, 255, 255);
+        margin: 0% ;
+    }
+    .img1{
+        margin: 5%;
+      background-color: brown;
+       height: 60%;
+       width: 90%;
+    border-radius: 10px;
+    }
+    .img1_1{
+        margin: 0%;
+        background-color: rgb(255, 255, 255);
+        height: 20px;
+        width: 20px;
+        align-items: start;
+       
+    }
+    .description1_1{ 
+        background-color: rgb(255, 255, 255);
+     
+        height: 60%;
+        width: 60%;
+        display:flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .description2{
+        background-color: rgb(255, 255, 255);
+       font-size: 11px;
+       margin: 5%;
+    
+    }
+    .icon{
+        display: flex;
+        flex-direction: row;
+       align-items: flex-start;
+        padding: 10%;
+        height: 5%;
+        width: 100%;
+        flex-direction: column;
+        
+    }
+    .top {
+        font-family: "Roboto", sans-serif;
+        font-weight: 900;
+        font-style: normal;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    
+    
+      }
+     
+     
+     #above p:hover{
+        background-color: black;
+        color: white;
+        border-radius: 20px;
+        padding: 4px;
+        
+     }
+    #p1{
+        background-color:white;
+        font-size: 10px;
+        width: 117px;
+        height: 25px;
+    }
+    #p2{
+        color: rgb(68, 68, 213);
+    }
+    .signin{
+       justify-content: center;
+    }
+    .search{
+        height: 25px;
+        width: 50px;
+        display: flex;
+        align-items: center;
+        background-color: aliceblue;
+        justify-content: center;
+    }
+    .img1_2{
+        margin: 0%;
+       
+        height: 20px;
+        width: 20px;
+       justify-content: start;
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    ._1_3{
+        height: 40px;
+        width: 40vw;
+        display: flex;
+       justify-content: space-between;
+    
+        background-color: rgb(233, 233, 233);
+       align-items: center;
+        border-radius: 20px;
+    }
+    #_1_3{
+        display: flex;
+        align-items: center;
+        margin: 0%;
+        background-color: rgb(255, 255, 255);
+        height: 17px;
+        width: 17px;
+        justify-content: left;
+    }
+    #account{
+        display: flex;
+        align-items: center;
+        background-color:rgb(255, 255, 255);
+        border-radius: 20px;
+        height: 27px;
+        width: 5wv;
+        font-size: 10px;
+       
+    }
+    .account{
+        display: flex;
+        align-items: start;
+        border: solid 1px rgb(203, 203, 203);
+        background-color:rgb(255, 255, 255);
+        border-radius: 20px;
+        height: 27px;
+        width: 5wv;
+        display: flex;
+        align-items: center;
+        font-size: 10px;
+       
+    }
+    #icon{
+        display: flex;
+        align-items: center;
+        margin: 5px;
+       
+    }
+    .hidden{
+        display: flex;
+        align-items: center;
+        margin: 5px;
+       
+    }
+    .img1_5{
+        margin: 0%;
+        color:rgb(0, 0, 0);
+        height: 17px;
+        width: 17px;
+        display: flex;
+       
+        
+    }
+    .img1_6{
+        margin: 5px;
+        background-color: rgb(233, 233, 233);
+        height: 17px;
+        width: 17px;
+     justify-content: flex-end;
+        display: flex;
+        align-items: center;
+       border-left: solid black 1px;
+    }
+    #img1_6{
+        justify-content: flex-end;
+        display: flex;
+        align-items: center;
+       border-left-color: solid  black 1px;
+    }
+    .text{
+        margin-left: 7px;
+        
+    
+    } 
+    #icon :hover{
+        background-color: rgb(204, 204, 204);
+    }
 }
-#p2{
-    color: rgb(68, 68, 213);
-}
-.signin{
-   justify-content: center;
-}
-.search{
-    height: 25px;
-    width: 50px;
-    display: flex;
-    align-items: center;
-    background-color: aliceblue;
-    justify-content: center;
-}
-.img1_2{
-    margin: 0%;
-    background-color: aquamarine;
-    height: 17px;
-    width: 17px;
-   justify-content: start;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-}
-._1_3{
-    height: 40px;
-    width: 50vw;
-    display: flex;
-    align-items: center;
-    background-color: rgb(233, 233, 233);
-    justify-content: center;
-    align-items: center;
-    border-radius: 20px;
-}
-#_1_3{
-    display: flex;
-    align-items: center;
-    margin: 0%;
-    background-color: aquamarine;
-    height: 17px;
-    width: 17px;
-    justify-content: left;
-}
-#account{
-    display: flex;
-    align-items: center;
-    background-color:rgb(255, 255, 255);
-    border-radius: 20px;
-    height: 27px;
-    width: 5wv;
-    font-size: 10px;
-   
-}
-.account{
-    display: flex;
-    align-items: start;
-    border: solid 1px rgb(203, 203, 203);
-    background-color:rgb(255, 255, 255);
-    border-radius: 20px;
-    height: 27px;
-    width: 5wv;
-    display: flex;
-    align-items: center;
-    font-size: 10px;
-   
-}
-#icon{
-    display: flex;
-    align-items: center;
-    margin: 5px;
+@media screen and (min-width: 481px) and (max-width: 768px) {
+    .top{ 
+        width: 100%;
+        height: 10vh;
+        background-color: rgb(255, 255, 255);
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        font-size: large;
+        align-items: center;
+       
+    }
+    body{ 
+        margin: 0%;
+    }
+    .container{
+        display: flex;
+    }
+    .newleft{ 
+        height: 100%;
+        width: 15%;
+        background-color: rgb(255, 255, 255);
+       display: flex;
+       flex-direction: column;
+       flex-wrap: wrap;
+    }
+    .right{
+        height: 80vh;
+        width: 85%;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .youtube{
+        width: 80px;
+        height: 40px;
+      margin-left: 2px;
+    }
+    
+    
+    #under{
+        height: 80vh;
+        width: 100%;
+        background-color: rgb(255, 255, 255);
+        margin: 0%;
+        padding: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+    #above{
+        height:3vh;
+        width: 100%;
+        background-color: aliceblue;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        font-size: 10px;
+    }
+    ._1{ 
+        background-color: rgb(255, 255, 255);
+        height: 30%;
+        width: 40%;
+        margin: 20px;
+        display: flex;
+        flex-direction: column;
+        margin-top: 0%;
+        margin-bottom: 0%;
+    }
+    ._1_1{
+        display: flex;
+       justify-content: space-evenly;
+       align-items: center;
+        background-color: rgb(255, 255, 255);
+        margin: 0% ;
+    }
+    .img1{
+        margin: 5%;
+      background-color: rgb(114, 38, 38);
+       height: 60%;
+       width: 90%;
+    border-radius: 10px;
+    }
+    .img1_1{
+        margin: 0%;
+        background-color: rgb(255, 255, 255);
+        height: 20px;
+        width: 20px;
+        align-items: start;
+       
+    }
+    .description1_1{ 
+        background-color: rgb(255, 255, 255);
+     
+        height: 60%;
+        width: 60%;
+        display:flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .description2{
+        background-color: rgb(255, 255, 255);
+       font-size: 11px;
+       margin: 5%;
+    
+    }
+    .icon{
+        display: flex;
+        flex-wrap: wrap;
+       align-items: flex-start;
+        padding: 10%;
+        height: 5%;
+        width: 100%;
+        flex-direction: column;
+    }
+    .top {
+        font-family: "Roboto", sans-serif;
+        font-weight: 900;
+        font-style: normal;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    
+    
+      }
+     
+     
+     #above p:hover{
+        background-color: black;
+        color: white;
+        border-radius: 20px;
+        padding: 4px;
+        
+     }
+    #p1{
+        background-color:white;
+        font-size: 10px;
+        width: 117px;
+        height: 25px;
+    }
+    #p2{
+        color: rgb(68, 68, 213);
+    }
+    .signin{
+       justify-content: center;
+    }
+    .search{
+        height: 25px;
+        width: 50px;
+        display: flex;
+        align-items: center;
+        background-color: aliceblue;
+        justify-content: center;
+    }
+    .img1_2{
+        margin: 0%;
+       
+        height: 20px;
+        width: 20px;
+       justify-content: start;
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    ._1_3{
+        height: 40px;
+        width: 40vw;
+        display: flex;
+       justify-content: space-between;
+    
+        background-color: rgb(233, 233, 233);
+       align-items: center;
+        border-radius: 20px;
+    }
+    #_1_3{
+        display: flex;
+        align-items: center;
+        margin: 0%;
+        background-color: rgb(255, 255, 255);
+        height: 17px;
+        width: 17px;
+        justify-content: left;
+    }
+    #account{
+        display: flex;
+        align-items: center;
+        background-color:rgb(255, 255, 255);
+        border-radius: 20px;
+        height: 27px;
+        width: 5wv;
+        font-size: 10px;
+       
+    }
+    .account{
+        display: flex;
+        align-items: start;
+        border: solid 1px rgb(203, 203, 203);
+        background-color:rgb(255, 255, 255);
+        border-radius: 20px;
+        height: 27px;
+        width: 5wv;
+        display: flex;
+        align-items: center;
+        font-size: 10px;
+       
+    }
+    #icon{
+        display: flex;
+      justify-content: center;
+        margin: 5px;
+        flex-direction: column;
+
+    }
+    .img1_5{
+        margin: 0%;
+        color:rgb(0, 0, 0);
+        height: 17px;
+        width: 17px;
+        display: flex;
+       
+        
+    }
+    .img1_6{
+        margin-left: 5px;
+       
+        height: 17px;
+        width: 17px;
+     justify-content: flex-end;
+        display: flex;
+        align-items: center;
+       border-left: solid black 1px;
+    }
+    #img1_6{
+        justify-content: flex-end;
+        display: flex;
+        align-items: center;
+       border-left-color: solid  black 1px;
+    }
+    .text{
+        margin-left: 7px;
+        
+    
+    } 
+    #icon :hover{
+        background-color: rgb(203, 203, 203);
+    }
+    .hidden {
+        visibility: hidden;
+       
+    }
+    .hidden1{
+        visibility: hidden;
+    }
 }
