--- a/codely/hover/hover.css
+++ b/codely/hover/hover.css
@@ -142,6 +142,9 @@
     transition-property: color;
     -webkit-transition-duration: 0.3s;
     transition-duration: 0.3s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .hvr-shutter-out-horizontal:before {
     content: "";
@@ -151,7 +154,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background: #11C86D;
+    background:  rgb(130, 65, 204);
     -webkit-transform: scaleX(0);
     transform: scaleX(0);
     -webkit-transform-origin: 50%;
@@ -164,7 +167,7 @@
     transition-timing-function: ease-out;
   }
   .hvr-shutter-out-horizontal:hover, .hvr-shutter-out-horizontal:focus, .hvr-shutter-out-horizontal:active {
-    color: white;
+    color: rgb(255, 255, 255);
   }
   .hvr-shutter-out-horizontal:hover:before, .hvr-shutter-out-horizontal:focus:before, .hvr-shutter-out-horizontal:active:before {
     -webkit-transform: scaleX(1);
