--- a/hicheel15/style.css
+++ b/hicheel15/style.css
@@ -6,13 +6,11 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-around;
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-style: normal;
-  ;
+   
 }
 .abstract:hover {
     color: rgb(195, 195, 195);
+    text-decoration: none;
 }
 .abstract{
     text-decoration: none;
@@ -22,6 +20,8 @@ header{
     font-family: "Roboto", sans-serif;
     font-weight: 550;
     font-style: normal;
+   
+   
 }
 .helpcenter{
     text-decoration: none;
@@ -119,13 +119,14 @@ p{
 }
 #textheader{
     font-weight: 550;
+    margin: 15px;
+    margin-left: 0%;
 }
-.text{
-   padding: 15px;
-}
+
 #learn{
     color: #4c5fd5;
     text-decoration: none;
+    margin: 15px;
 }
 #learn:hover{
     text-decoration: underline;
@@ -146,4 +147,45 @@ p{
 }
 footer{
     background-color: black;
+    color: white;
+    font-size: larger;
+    display: flex;
+    height: 600px;
+   
+}
+a{
+    color: white;
+    text-decoration: none;
+}
+a:hover{
+    text-decoration: underline;
+}
+html{
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+}
+._3{
+    display: flex;
+    height:30% ;
+    width: 30% ;
+    flex-direction: column;
+  margin: 10px;
+}
+#_3{
+    display: flex;
+    flex-direction: column;
+}
+._4{
+    display: flex;
+    height:40% ;
+    width: 20% ;
+    flex-direction: column;
+    justify-content: end;
+    margin: 60px;
+    
+}
+._5{
+    display: flex;
+    margin: 70px;
 }
