--- a/hicheel17/style.css
+++ b/hicheel17/style.css
@@ -63,9 +63,7 @@ a {
   display: flex;
   justify-content: center;
 }
-p {
-  color: #1d3fbb;
-}
+
 #text1 {
   display: flex;
   font-size: x-large;
@@ -269,4 +267,75 @@ footer .text1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+.email {
+  width: 25vw;
+  height: 2vw;
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+}
+#email {
+  width: 75%;
+  background-color: rgb(207, 207, 207);
+  color: gray;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+}
+#signup {
+  width: 25%;
+  background-color: #1d3fbb;
+  color: white;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+._5 {
+  width: 25vw;
+  height: 2vw;
+  display: flex;
+  margin-top: 20px;
+}
+.english {
+  width: 9vw;
+  background-color: rgb(207, 207, 207);
+  margin-right: 1.5px;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  justify-content: space-between;
+}
+.mongolia {
+  width: 15vw;
+  background-color: rgb(207, 207, 207);
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  justify-content: space-between;
+}
+#down {
+  width: 20px;
+  height: 20px;
+  padding-right: 10px;
+}
+._6 {
+  display: flex;
+  flex-direction: column;
+  width: 25vw;
+  justify-content: flex-start;
+  margin-bottom: 40px;
+}
+.logos {
+  display: flex;
+}
+#logos {
+  width: 30px;
+  height: 30px;
+  margin: 5px;
+}
+._6 #_1 {
+  margin-bottom: 10px;
 }
